update demo 04 fixed
not responsive yet

--- a/demo4/resources/style.css
+++ b/demo4/resources/style.css
@@ -5,6 +5,9 @@
     font-style: normal;
 }
 
+body{
+    min-width: 500px;
+}
 
 /* split 2 big parts */
 .split {
@@ -15,7 +18,6 @@
 /* navbar-fixed-left */
 .leftside-bar {
     width: 100px;
-    /* height: 1500px; */
     left: 0px;
     top: 0px;
     text-align: center;
@@ -24,9 +26,13 @@
 }
 
 .logo-icon {
-    /* padding: 13px 17px 42px 17px; */
     margin-top: 13px;
     padding: 0 17px;
+}
+
+.logo-icon:hover,
+.dashboard-item-selected :hover {
+    cursor: pointer;
 }
 
 .leftside-bar-items {
@@ -46,8 +52,22 @@
     padding-top: 15px;
 }
 
+
 .dashboard-item {
-    padding: 21px 39px 21px 40px;
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    margin-top: 20px;
+    padding-top: 15px;
+}
+
+
+.dashboard-item:hover {
+    cursor: pointer;
+    border-radius: 6px;
+    border: #8950FC;
+    background-color: rgba(255, 255, 255, .1);
+
 }
 
 /* end leftside navbar-fixed-left */
@@ -56,7 +76,6 @@
 
 .rightside-widget {
     width: 100%;
-    /* width: 1400px; */
 }
 
 .my-menu {
@@ -83,8 +102,11 @@
     font-size: 14px;
     line-height: 21px;
 
-    padding: 30px 12px 29px 12px;
+    padding: 12px 19px;
     color: #80808F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar-nav li:first-child {
@@ -103,6 +125,11 @@
 
     background: #F3F6F9;
     border-radius: 6px;
+    padding: 12px 19px;
+}
+
+.nav-item a:hover {
+    color: #8950FC !important;
 }
 
 /* iconbars */
@@ -119,7 +146,24 @@
 }
 
 .notification img {
-    padding-right: 20px;
+    padding: 10px;
+}
+
+.notification img:hover {
+    background-color: #f5f8fa;
+    cursor: pointer;
+    border-radius: 0.475rem;
+}
+
+
+.user {
+    padding: 5px;
+}
+
+.user:hover {
+    background: #f5f8fa;
+    border-radius: 0.4rem;
+    cursor: pointer;
 }
 
 /* search engine  */
@@ -183,7 +227,7 @@
 
 .form-input {
     width: 70%;
-    margin: 17px 0 40px 40px;
+    margin: 17px 0 40px 0px;
     padding: 10px;
     border-radius: 6px;
     background: #fff;
@@ -193,7 +237,6 @@
 .form-group {
     padding: 10px 0;
     display: flex;
-    /* hmm... */
 }
 
 .form-input input {
@@ -216,6 +259,7 @@
 }
 
 .search-btn {
+    cursor: pointer;
     background: #212121;
     border-radius: 6px;
     width: 82px;
@@ -251,7 +295,7 @@
 
 /* widgets */
 .rightside-widget {
-    background: #D5D9E2;
+    background-color: #EDEFF4;
 }
 
 
@@ -280,6 +324,11 @@
     width: 410px;
     position: relative;
     margin-right: 0;
+}
+
+.second-row .weekly-sale-stats,
+.third-row .weekly-sale-stats {
+    margin-top: 0px;
 }
 
 .wrapped .wrapped-title {
@@ -323,7 +372,8 @@
 }
 
 .rank-child img {
-    padding-right: 14px;
+    border-radius: 6px;
+    margin-right: 14px;
 }
 
 .rank-child .name {
@@ -337,6 +387,12 @@
 
 }
 
+.rank-child .name:hover,
+.header-post:hover {
+    transition: color .2s ease;
+    color: #7239ea !important;
+}
+
 .rank-child .speciality {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -344,6 +400,12 @@
     font-size: 12px;
     line-height: 18px;
     color: #B5B5C3;
+}
+
+.name-and-speciality {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .weekly-sale-income {
@@ -367,10 +429,30 @@
 
 .weekly-sale-chart img {
     width: 100%;
+    border-radius: 12px;
+}
+
+.weekly-sale-chart button {
+    position: absolute;
+    border: none;
+    background-color: #1BC5BD;
+    color: #FFFFFF;
+    border-radius: 6px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 200px;
+    height: 38px;
 }
 
 /* wrapped header and table */
-/* ..... */
 .wrapped-header-and-table {
     margin: 40px;
 }
@@ -394,7 +476,13 @@
 
     padding: 8px 19px;
     margin-right: 30px;
+    border: none;
 }
+
+.btn-new-report:hover {
+    background-color: #7239ea;
+}
+
 
 .left-side-title {
     padding: 26px 0 7px 29px;
@@ -451,7 +539,7 @@ td {
     font-size: 14px;
 
     color: #464E5F;
-
+    vertical-align: middle;
 }
 
 .btn-action {
@@ -461,6 +549,10 @@ td {
 
 .btn-action div {
     padding-left: 10px;
+}
+
+.btn-action img:hover {
+    cursor: pointer;
 }
 
 .date {
@@ -475,17 +567,26 @@ td {
     color: #B5B5C3;
 }
 
-.table input[type='checkbox'] {
+/* ---------------- */
+.table input.form-check-input {
     background-color: #F3F6F9;
     border-radius: 6px;
     width: 25px;
     height: 25px;
-    vertical-align: middle;
     outline: none;
-    appearance: none;
-    -webkit-appearance: none;
-    cursor: pointer;
+    border: none;
 }
+
+.form-check-input:focus {
+    box-shadow: none !important;
+}
+
+.table-bellow input.form-check-input:checked {
+    background-color: #7239ea;
+    color: #fff;
+}
+
+/* ------------- */
 
 tr:last-child td {
     border-bottom: none;
@@ -546,7 +647,7 @@ tr:last-child td {
 }
 
 .sumary {
-    padding: 50px 60px;
+    padding: 31.46px 50px 0 70px;
     background: #FFFFFF;
     border-radius: 12px;
     position: absolute;
@@ -573,6 +674,7 @@ tr:last-child td {
     font-size: 12px !important;
     line-height: 18px;
     color: #B5B5C3;
+    margin-bottom: 1px;
 }
 
 .sumary .sumary-content {
@@ -589,12 +691,16 @@ tr:last-child td {
 .last-row {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     padding-right: 30px;
 }
 
+.last-row img {
+    padding-top: 30px;
+}
+
 .third-row .header {
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -610,6 +716,6 @@ tr:last-child td {
     font-size: 22px;
     line-height: 33px;
     color: #212121;
-
+    margin: 0;
     padding: 25px 30px 20px 29px;
 }
